--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "maki": "git://github.com/martindale/maki",
     "maki-auth-simple": "^0.1.1",
-    "maki-passport-local": "0.0.4"
+    "maki-passport-local": "0.0.4",
+    "maki-remote": "0.0.1"
   },
   "scripts": {
     "start": "node hive:web.js",
