--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "maki": "git://github.com/martindale/maki#nko",
     "maki-auth-simple": "^0.1.1",
     "maki-passport-local": "0.0.4",
-    "maki-remote": "0.0.1"
+    "maki-remote": "0.0.1",
+    "mongoose": "^4.2.4"
   },
   "scripts": {
     "start": "node web.js",
     "postinstall": "node scripts/postinstall.js"
   },
-  "engines" : {
+  "engines": {
     "node": "0.10.x"
   }
 }
