--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-core": "^6.1.2",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.1.3",
     "babel-preset-es2015": "^6.1.2",
+    "babelify": "^7.2.0",
     "browser-sync": "^2.9.12",
     "browserify": "^12.0.1",
     "cssnext": "^1.8.4",
