--- a/package.json
+++ b/package.json
@@ -5,6 +5,15 @@
   "author": "Node Knockout Team <all@nodeknockout.com>",
   "main": "./app.js",
   "dependencies": {
+    "angular": "^1.4.7",
+    "angular-animate": "^1.4.7",
+    "angular-aria": "^1.4.7",
+    "angular-jwt": "0.0.9",
+    "angular-material": "^0.11.4",
+    "angular-messages": "^1.4.7",
+    "angular-new-router": "^0.5.3",
+    "angular-resource": "^1.4.7",
+    "angular-ui-router": "^0.2.15",
     "autoprefixer": "^6.1.0",
     "babel-core": "^6.1.2",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.1.3",
@@ -14,6 +23,7 @@
     "browserify": "^12.0.1",
     "cssnext": "^1.8.4",
     "gulp": "^3.9.0",
+    "gulp-jade": "^1.1.0",
     "gulp-load-plugins": "^1.1.0",
     "gulp-nodemon": "^2.0.4",
     "gulp-postcss": "^6.0.1",
