--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "angular-aria": "^1.4.7",
     "angular-jwt": "0.0.9",
     "angular-material": "^0.11.4",
+    "angular-material-icons": "^0.6.0",
     "angular-messages": "^1.4.7",
     "angular-new-router": "^0.5.3",
     "angular-resource": "^1.4.7",
