--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "postcss-import": "^7.1.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.6.0"
+    "watchify": "^3.6.0",
+    "youtube-api": "^1.2.1"
   },
   "scripts": {
     "start": "node web.js",
