--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "maki-auth-simple": "^0.1.1",
     "maki-passport-local": "0.0.4",
     "maki-remote": "0.0.3",
+    "moment": "^2.10.6",
     "mongoose": "^4.2.4",
     "postcss-import": "^7.1.3",
     "vinyl-buffer": "^1.0.0",
