--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "browser-sync": "^2.9.12",
     "browserify": "^12.0.1",
     "cssnext": "^1.8.4",
+    "fabric": "github:martindale/fabric#http",
     "gulp": "^3.9.0",
     "gulp-jade": "^1.1.0",
     "gulp-load-plugins": "^1.1.0",
